--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       background-color: var(--putih-lembut);
       color: var(--hijau-tua);
       line-height: 1.6;
+      scroll-padding-top: 80px;
     }
 
     header {
@@ -70,7 +71,6 @@
       transform: translateY(-2px);
     }
 
-    /* ==== BANNER FIX ==== */
     .banner {
       position: relative;
       width: 100%;
@@ -89,7 +89,7 @@
       position: absolute;
       top: 0; left: 0;
       width: 100%; height: 100%;
-      background: rgba(0,0,0,0.35); /* efek gelap lembut */
+      background: rgba(0,0,0,0.35);
     }
 
     .banner p {
@@ -156,7 +156,6 @@
 
     .btn:hover { background-color: #00751c; }
 
-    /* --- Section Pengurus --- */
     .pengurus {
       text-align: center;
     }
@@ -193,6 +192,23 @@
       font-size: 0.95em;
     }
 
+    .contact-link {
+      display: inline-block;
+      margin-top: 8px;
+      background-color: #00b32d;
+      color: white;
+      padding: 5px 10px;
+      border-radius: 8px;
+      text-decoration: none;
+      font-size: 0.85em;
+      transition: all 0.3s ease;
+    }
+
+    .contact-link:hover {
+      background-color: #008a22;
+      transform: translateY(-2px);
+    }
+
     footer {
       background-color: var(--hijau-tua);
       color: white;
@@ -203,11 +219,57 @@
     }
 
     @media (max-width: 768px) {
-      header h1 { font-size: 1.3em; }
-      .banner { height: 200px; font-size: 1.2em; }
-      nav a { display: block; margin: 6px 0; }
-      .container { margin: 20px auto; }
-      .pengurus img { width: 90px; height: 90px; }
+      header {
+        flex-direction: column;
+        text-align: center;
+      }
+
+      header img {
+        height: 50px;
+        margin-bottom: 8px;
+      }
+
+      header h1 {
+        font-size: 1.3em;
+      }
+
+      .banner {
+        height: 200px;
+        font-size: 1.2em;
+        padding: 0 15px;
+      }
+
+      nav {
+        padding: 8px 0;
+      }
+
+      nav a {
+        font-size: 0.85em;
+        padding: 6px 10px;
+        margin: 0 5px;
+      }
+
+      body {
+        scroll-padding-top: 60px;
+      }
+
+      .grid {
+        grid-template-columns: 1fr;
+      }
+
+      .pengurus img {
+        width: 90px;
+        height: 90px;
+      }
+
+      section {
+        padding: 18px;
+      }
+
+      footer {
+        font-size: 0.8em;
+        padding: 15px;
+      }
     }
   </style>
 </head>
@@ -221,9 +283,10 @@
 
   <nav>
     <a href="#home">Home</a>
-    <a href="#info-pt">Informasi Perguruan Tinggi</a>
-    <a href="#lowongan">Lowongan BKK</a>
-    <a href="#pengurus">Struktur Humas dan BKK</a>
+    <a href="#info-pt">Informasi PT</a>
+    <a href="#lowongan">Lowongan</a>
+    <a href="#pengurus">Pengurus BKK</a>
+    <a href="#kontak">Kontak</a>
   </nav>
 
   <div class="banner">
@@ -232,10 +295,11 @@
 
   <div class="container">
     <section id="home">
-      <h2>Selamat Datang di Portal Humas & BKK</h2>
-      <p>Portal resmi untuk siswa SMK Ma'arif NU Bobotsari yang menyediakan informasi seputar perguruan tinggi, beasiswa, dan lowongan kerja. Kami hadir untuk membantu kamu melangkah menuju masa depan yang gemilang 🌱</p>
-    </section>
-
+  <h2>Selamat Datang di Portal Humas & BKK Mabos</h2>
+  <p>Selamat Datang di Portal Resmi Humas & Bursa Kerja Khusus (BKK) SMK Ma’arif NU Bobotsari.  
+  Website ini menjadi sarana informasi resmi yang menyediakan berbagai hal seputar dunia pendidikan dan karier, mulai dari <strong>informasi perguruan tinggi, beasiswa, kegiatan kehumasan, hingga lowongan kerja bagi alumni</strong>.  
+  Kami berharap portal ini dapat menjadi jembatan antara sekolah, peserta didik, alumni, dan dunia industri — untuk bersama membangun generasi Ma’arif yang <strong>berkarakter, mandiri, dan siap bersaing di era modern.</strong> </p>
+</section>
     <section id="info-pt">
       <h2>Informasi Pendaftaran Perguruan Tinggi</h2>
       <div class="grid">
@@ -261,14 +325,14 @@
       <h2>Update Lowongan Pekerjaan BKK</h2>
       <div class="card">
         <h3>Operator Produksi - PT Chemco Harapan Nusantara</h3>
-        <p>Untuk lulusan SMK Teknik Mesin. Gaji UMR Cikarang. Lokasi: Cikarang.</p>
-        <a href="https://forms.gle/jynpsx7Vvc4EqYuT8" class="btn" target="_blank">Apply Sekarang</a>
+        <p>Untuk lulusan SMK Teknik Mesin. Gaji mulai Rp5.000.000/bulan. Lokasi: Cikarang dan Karawang.</p>
+        <a href="https://forms.gle/TXQjWWsADQzoygkm8" class="btn" target="_blank">Apply Sekarang</a>
       </div>
 
       <div class="card">
         <h3>Seleksi Pendidikan - United Tractor School</h3>
-        <p>Untuk lulusan SMK Teknik Mesin. Lokasi Tes: SMK Ma'arif Sumpiuh.</p>
-        <a href="https://forms.gle/TcZ5QHe9nE45MryH9" class="btn" target="_blank">Apply Sekarang</a>
+        <p>Untuk lulusan Teknik Mesin. Lokasi Tes: SMK Ma'arif Sumpiuh.</p>
+        <a href="https://forms.gle/m94Zto81Zi47trVd8" class="btn" target="_blank">Apply Sekarang</a>
       </div>
     </section>
 
@@ -276,25 +340,22 @@
       <h2>Struktural Humas dan BKK SMK Ma'arif NU Bobotsari</h2>
       <div class="grid">
         <div class="anggota">
-          <img src="BUdi.jpg" alt="WKS. Bid Humas dan Ketua BKK">
+          <img src="Budi.jpg" alt="WKS. Bid Humas dan Ketua BKK">
           <h4>Budi, S.Pd</h4>
-          <p>WKS. Bid Humas/Hubin dan Ketua BKK
-                        Contact Person 0812-2746-6276
-          </p>
+          <p>WKS. Bid Humas dan Ketua BKK</p>
+          <a href="https://wa.me/6281227466276" target="_blank" class="contact-link">📞 Hubungi via WhatsApp</a>
         </div>
         <div class="anggota">
           <img src="Anita.jpg" alt="Koord. KI, PKL dan Bendahara BKK">
           <h4>Anita Mujiati, S.Pd</h4>
-          <p>Koord. KI, PKL dan Bendahara BKK
-            Contact Person 0857-9998-5957
-          </p>
+          <p>Koord. KI, PKL dan Bendahara BKK</p>
+          <a href="https://wa.me/6285799985957" target="_blank" class="contact-link">📞 Hubungi via WhatsApp</a>
         </div>
         <div class="anggota">
           <img src="Iqbal-dia.jpg" alt="Staff Administrasi Humas dan BKK">
           <h4>Iqbal Dia Rofatul</h4>
-          <p>Staff Administrasi Humas dan BKK
-            Contact Person 0831-3625-2917
-          </p>
+          <p>Staff Administrasi Humas dan BKK</p>
+          <a href="https://wa.me/6283136252917" target="_blank" class="contact-link">📞 Hubungi via WhatsApp</a>
         </div>
       </div>
     </section>
@@ -302,15 +363,15 @@
     <section id="kontak">
       <h2>Kontak Kami</h2>
       <p>
-        📧 Email: bkkmabos1@gmail.com<br>
-        ☎️ Telepon: 0831-3625-2917 (Admin BKK)<br>
-        📍 Alamat: Jl.Kampung Baru, Dusun III, Gandasuli, Kec.Bobotsari,Kab.Purbalingga,Jawa Tengah<br>
+        📧 Email: humasmabos1@gmail.com<br>
+        ☎️ Telepon: 0831-3625-2917(Admin Humas dan BKK)<br>
+        📍 Alamat: Jl.Kampung Baru, Dusun III,Gandasuli,Kec. Bobotsari,Kab. Purbalingga, Jawa Tengah<br>
       </p>
     </section>
   </div>
 
   <footer>
-    <p>&copy; 2025 Humas & BKK SMK Ma'arif NU Bobotsari |</p>
+    <p>&copy; 2025 Humas & BKK SMK Ma'arif NU Bobotsari | </p>
   </footer>
 </body>
 </html>
