--- a/index.html
+++ b/index.html
@@ -285,8 +285,7 @@
     <a href="#home">Home</a>
     <a href="#info-pt">Informasi PT</a>
     <a href="#lowongan">Lowongan</a>
-    <a href="#pengurus">Pengurus BKK</a>
-    <a href="#kontak">Kontak</a>
+    <a href="#pengurus">Struktur Humas dan BKK</a>
   </nav>
 
   <div class="banner">
@@ -340,7 +339,7 @@
       <h2>Struktural Humas dan BKK SMK Ma'arif NU Bobotsari</h2>
       <div class="grid">
         <div class="anggota">
-          <img src="Budi.jpg" alt="WKS. Bid Humas dan Ketua BKK">
+          <img src="BUdi.jpg" alt="WKS. Bid Humas dan Ketua BKK">
           <h4>Budi, S.Pd</h4>
           <p>WKS. Bid Humas dan Ketua BKK</p>
           <a href="https://wa.me/6281227466276" target="_blank" class="contact-link">📞 Hubungi via WhatsApp</a>
@@ -375,3 +374,4 @@
   </footer>
 </body>
 </html>
+
