--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <!-- Fonts & Tailwind -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <script src="https://cdn.tailwindcss.com"></script>
-  <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet" />\n  <link rel="icon" href="SMK.png" type="image/png">
+  <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet" />\n  <link rel="icon" href="LP-Maarif.png" type="image/png">
 
   <style>
     body { font-family: 'Poppins', sans-serif; scroll-behavior: smooth; }
@@ -61,7 +61,7 @@
   <!-- HEADER -->
   <header class="bg-green-800 text-white flex items-center justify-between px-6 py-3 shadow-md sticky top-0 z-40">
     <div class="flex items-center gap-3">
-      <img src="SMK.png" alt="Logo SMK" class="h-10 md:h-12">
+      <img src="LP-Maarif.png" alt="Logo LP" class="h-10 md:h-12">
       <div>
         <h1 class="text-lg md:text-xl font-semibold">Humas & BKK SMK Ma'arif NU Bobotsari</h1>
         <p class="text-xs opacity-90">Portal Informasi Sekolah & Bursa Kerja Khusus</p>
@@ -78,9 +78,10 @@
     <ul class="flex flex-wrap justify-center gap-6 font-semibold px-3">
       <li><a href="#home" class="nav-link hover:text-yellow-200 transition">Home</a></li>
       <li><a href="#berita" class="nav-link hover:text-yellow-200 transition">Berita</a></li>
-      <li><a href="#info-pt" class="nav-link hover:text-yellow-200 transition">Info Perguruan Tinggi</a></li>
-      <li><a href="#lowongan-BKK" class="nav-link hover:text-yellow-200 transition">Lowongan BKK</a></li>
+      <li><a href="#info-pt" class="nav-link hover:text-yellow-200 transition">Info PT</a></li>
+      <li><a href="#lowongan" class="nav-link hover:text-yellow-200 transition">Lowongan</a></li>
       <li><a href="#pengurus" class="nav-link hover:text-yellow-200 transition">Pengurus</a></li>
+      <li><a href="#kontak" class="nav-link hover:text-yellow-200 transition">Kontak</a></li>
       <li><a href="#admin" class="nav-link hover:text-yellow-200 transition">Dashboard</a></li>
     </ul>
   </nav>
