--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <!-- Fonts & Tailwind -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <script src="https://cdn.tailwindcss.com"></script>
-  <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet" />\n  <link rel="icon" href="LP-Maarif.png" type="image/png">
+  <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet" /><link rel="icon" href="LP-Maarif.png" type="image/png">
 
   <style>
     body { font-family: 'Poppins', sans-serif; scroll-behavior: smooth; }
