--- a/index.html
+++ b/index.html
@@ -352,43 +352,33 @@
     // Default data (saya masukkan data contoh dari kode lamamu)
     const DEFAULT_NEWS = [
       {
-       "news": [
-    {
-      "id": "id-x74i9pt",
-      "title": "Monitoring dan Evaluasi (MONEV) SMK Binaan PT. Astra Daihatsu Motor PBD Wilayah Jawa Tengah di SMK Ma’arif NU Bobotsari",
-      "date": "2025-10-15",
-      "image": "monev.jpg",
-      "excerpt": "SMK Ma’arif NU Bobotsari menerima kunjungan dari PT. Astra Daihatsu Motor dalam kegiatan Monitoring dan Evaluasi (MONEV) Program Binaan Daihatsu (PBD) Wilayah Jawa Tengah pada 13 Oktober 2025.\nKegiatan ini menjadi langkah nyata dalam memperkuat sinergi sekolah dan dunia industri demi peningkatan kualitas pembelajaran dan kompetensi siswa.",
-      "content": "SMK Ma’arif NU Bobotsari menerima kunjungan dalam rangka Monitoring dan Evaluasi (MONEV) dari PT. Astra Daihatsu Motor selaku pembina SMK Program Pendidikan Binaan Daihatsu (PBD) Wilayah Jawa Tengah pada Senin, 13 Oktober 2025.\n\nKegiatan ini bertujuan untuk melakukan evaluasi terhadap pelaksanaan program pembinaan sekolah, terutama dalam hal pengembangan kompetensi keahlian otomotif, peningkatan mutu pembelajaran, dan penyelarasan kurikulum dengan kebutuhan dunia industri.\n\nTim asesor dari PT. Astra Daihatsu Motor, Revonda Andestadi dan Agus Ariesta, melakukan peninjauan terhadap sarana pembelajaran, dokumen administrasi, serta hasil implementasi program kerja sama industri di SMK Ma’arif NU Bobotsari.\n\nKepala SMK Ma’arif NU Bobotsari, Dedy Utomo, S.Pd, menyampaikan apresiasi atas dukungan yang terus diberikan oleh pihak Astra Daihatsu Motor. Beliau menegaskan bahwa kegiatan ini menjadi langkah penting dalam memastikan keberlanjutan pembinaan, sekaligus memperkuat komitmen sekolah dalam menyiapkan lulusan yang siap kerja, kompeten, dan berkarakter unggul.\n\nKegiatan berlangsung dengan lancar, penuh semangat, serta diakhiri dengan sesi dokumentasi bersama tim asesor dan pihak sekolah.",
-      "ts": 1760526547115
-    },
-    {
-      "id": "id-pkeq3fx",
-      "title": "SMK Ma'arif NU Bobotsari & BKK LP Ma'arif NU Jateng Jalin MoU dengan PT Formosa Bag Indonesia",
-      "date": "2025-10-15",
-      "image": "FBI.jpg",
-      "excerpt": "Kerjasama ini memperkuat jalur magang dan rekrutmen bagi lulusan SMK.",
-      "content": "Penandatanganan MoU dilakukan pada 2 Oktober 2025 di kantor PT Formosa Bag Indonesia. Perwakilan sekolah dan BKK hadir untuk merancang program pelatihan dan penempatan kerja bagi lulusan SMK Ma'arif NU Bobotsari.\n\nMelalui kemitraan ini, siswa akan mendapat akses magang terstruktur dan peluang rekrutmen yang sesuai kompetensi mereka.",
-      "ts": 1760526269071
-    },
-    {
-      "id": "id-g7zo5qf",
-      "title": "Visitasi Industri ke Parklan World Indonesia (PWI Jepara)",
-      "date": "2025-10-15",
-      "image": "PWI.jpg",
-      "excerpt": "Kunjungan untuk memperluas wawasan industri siswa dan hubungan magang.",
-      "content": "SMK Ma'arif NU Bobotsari bersama BKK LP Ma'arif NU Jateng melakukan visitasi pada 2 Oktober 2025 di Parklan World Indonesia (PWI Jepara). Delegasi menerima paparan proses produksi dan peluang magang.",
-      "ts": 1760526228206
-    },
-    {
-      "id": "id-am83czf",
-      "title": "Rekapitulasi Realisasi Penggunaan Dana Bosp",
-      "date": "2025-07-04",
-      "image": "Bosp.jpeg",
-      "excerpt": "Rekapitulasi Realisasi Penggunaan Dana Bosp periode tanggal : 01 Januari s.d 30Juni 2025 Tahap 1 Tahun 2025",
-      "content": "SMK Ma’arif NU Bobotsari telah merilis laporan Rekapitulasi Realisasi Penggunaan Dana BOS Reguler Tahap 1 Tahun 2025 untuk periode 01 Januari–30 Juni 2025.\nTotal dana yang diterima sebesar Rp 1.483.200.000, dengan realisasi penggunaan Rp 1.325.695.505 dan saldo akhir Rp 166.520.341.\nLaporan disusun secara transparan dan akuntabel sesuai Juknis BOS Tahun 2025.",
-      "ts": 1760526136355
-    }
+        id: cryptoId(),
+        title: "SMK Ma'arif NU Bobotsari & BKK LP Ma'arif NU Jateng Jalin MoU dengan PT Formosa Bag Indonesia",
+        date: "2025-10-02",
+        image: "https://source.unsplash.com/800x450/?factory,handshake",
+        excerpt: "Kerjasama ini memperkuat jalur magang dan rekrutmen bagi lulusan SMK.",
+        content: "<p>Penandatanganan MoU dilakukan pada 2 Oktober 2025 di kantor PT Formosa Bag Indonesia. Perwakilan sekolah dan BKK hadir untuk merancang program pelatihan dan penempatan kerja bagi lulusan SMK Ma'arif NU Bobotsari.</p><p>Melalui kemitraan ini, siswa akan mendapat akses magang terstruktur dan peluang rekrutmen yang sesuai kompetensi mereka.</p>",
+        ts: Date.now() - (1000*60*60*24*10) // contoh timestamp
+      },
+      {
+        id: cryptoId(),
+        title: "Visitasi Industri ke Parklan World Indonesia (PWI Jepara)",
+        date: "2025-10-02",
+        image: "https://source.unsplash.com/800x450/?industry,visit",
+        excerpt: "Kunjungan untuk memperluas wawasan industri siswa dan hubungan magang.",
+        content: "<p>SMK Ma'arif NU Bobotsari bersama BKK LP Ma'arif NU Jateng melakukan visitasi pada 2 Oktober 2025 di Parklan World Indonesia (PWI Jepara). Delegasi menerima paparan proses produksi dan peluang magang.</p>",
+        ts: Date.now() - (1000*60*60*24*8)
+      },
+      {
+        id: cryptoId(),
+        title: "Apel Pagi: Antisipasi Aksi Demo dan Pembinaan Siswa",
+        date: "2025-09-01",
+        image: "https://source.unsplash.com/800x450/?students,school",
+        excerpt: "Apel pagi membahas sikap siswa terhadap isu eksternal agar tidak terprovokasi.",
+        content: "<p>Pada apel pagi 1 September 2025, pihak sekolah memberikan arahan untuk tidak mudah terprovokasi oleh tindakan demo yang berpotensi membahayakan. Kepala Sekolah mengingatkan pentingnya keselamatan dan fokus belajar.</p>",
+        ts: Date.now() - (1000*60*60*24*30)
+      }
+    ];
 
     const DEFAULT_INFOPT = [
       { id: cryptoId(), title: "SNBP (Prestasi)", link: "https://portal-snpmb.bppp.kemdikbud.go.id/", image: "https://cdn-icons-png.flaticon.com/512/3135/3135755.png", excerpt: "Jalur undangan berdasarkan prestasi akademik & non-akademik."},
@@ -954,4 +944,3 @@
   </script>
 </body>
 </html>
-
