--- a/index.html
+++ b/index.html
@@ -353,29 +353,37 @@
     const DEFAULT_NEWS = [
       {
         id: cryptoId(),
-        title: "SMK Ma'arif NU Bobotsari & BKK LP Ma'arif NU Jateng Jalin MoU dengan PT Formosa Bag Indonesia",
-        date: "2025-10-02",
-        image: "https://source.unsplash.com/800x450/?factory,handshake",
-        excerpt: "Kerjasama ini memperkuat jalur magang dan rekrutmen bagi lulusan SMK.",
-        content: "<p>Penandatanganan MoU dilakukan pada 2 Oktober 2025 di kantor PT Formosa Bag Indonesia. Perwakilan sekolah dan BKK hadir untuk merancang program pelatihan dan penempatan kerja bagi lulusan SMK Ma'arif NU Bobotsari.</p><p>Melalui kemitraan ini, siswa akan mendapat akses magang terstruktur dan peluang rekrutmen yang sesuai kompetensi mereka.</p>",
+        title: "Monitoring dan Evaluasi (MONEV) SMK Binaan PT. Astra Daihatsu Motor PBD Wilayah Jawa Tengah di SMK Ma’arif NU Bobotsari",
+        date: "2025-10-13",
+        image: "Monev.jpg",
+        excerpt: "SMK Ma’arif NU Bobotsari menerima kunjungan dari PT. Astra Daihatsu Motor dalam kegiatan Monitoring dan Evaluasi (MONEV) Program Binaan Daihatsu (PBD) Wilayah Jawa Tengah pada 13 ",
+        content: "<p>SMK Ma’arif NU Bobotsari menerima kunjungan dalam rangka Monitoring dan Evaluasi (MONEV) dari PT. Astra Daihatsu Motor selaku pembina SMK Program Pendidikan Binaan Daihatsu (PBD) Wilayah Jawa Tengah pada Senin, 13 Oktober 2025. Kegiatan ini bertujuan untuk melakukan evaluasi terhadap pelaksanaan program pembinaan sekolah, terutama dalam hal pengembangan kompetensi keahlian otomotif, peningkatan mutu pembelajaran, dan penyelarasan kurikulum dengan kebutuhan dunia industri. Tim asesor dari PT. Astra Daihatsu Motor, Revonda Andestadi dan Agus Ariesta, melakukan peninjauan terhadap sarana pembelajaran, dokumen administrasi, serta hasil implementasi program kerja sama industri di SMK Ma’arif NU Bobotsari. Kepala SMK Ma’arif NU Bobotsari, Dedy Utomo, S.Pd, menyampaikan apresiasi atas dukungan yang terus diberikan oleh pihak Astra Daihatsu Motor. Beliau menegaskan bahwa kegiatan ini menjadi langkah penting dalam memastikan keberlanjutan pembinaan, sekaligus memperkuat komitmen sekolah dalam menyiapkan lulusan yang siap kerja, kompeten, dan berkarakter unggul. Kegiatan berlangsung dengan lancar, penuh semangat, serta diakhiri dengan sesi dokumentasi bersama tim asesor dan pihak sekolah.",
         ts: Date.now() - (1000*60*60*24*10) // contoh timestamp
       },
       {
         id: cryptoId(),
-        title: "Visitasi Industri ke Parklan World Indonesia (PWI Jepara)",
+        title: "Visitasi Industri ke Parkland World Indonesia (PWI Jepara)",
         date: "2025-10-02",
-        image: "https://source.unsplash.com/800x450/?industry,visit",
+        image: "Pwi.jpg",
         excerpt: "Kunjungan untuk memperluas wawasan industri siswa dan hubungan magang.",
         content: "<p>SMK Ma'arif NU Bobotsari bersama BKK LP Ma'arif NU Jateng melakukan visitasi pada 2 Oktober 2025 di Parklan World Indonesia (PWI Jepara). Delegasi menerima paparan proses produksi dan peluang magang.</p>",
         ts: Date.now() - (1000*60*60*24*8)
       },
       {
         id: cryptoId(),
-        title: "Apel Pagi: Antisipasi Aksi Demo dan Pembinaan Siswa",
-        date: "2025-09-01",
-        image: "https://source.unsplash.com/800x450/?students,school",
-        excerpt: "Apel pagi membahas sikap siswa terhadap isu eksternal agar tidak terprovokasi.",
-        content: "<p>Pada apel pagi 1 September 2025, pihak sekolah memberikan arahan untuk tidak mudah terprovokasi oleh tindakan demo yang berpotensi membahayakan. Kepala Sekolah mengingatkan pentingnya keselamatan dan fokus belajar.</p>",
+        title: "SMK Ma'arif NU Bobotsari & BKK LP Ma'arif NU Jateng Jalin MoU dengan PT Formosa Bag IndonesiaApel Pagi: Antisipasi Aksi Demo dan Pembinaan Siswa",
+        date: "2025-10-02",
+        image: "FBI.jpg",
+        excerpt: "Kerjasama ini memperkuat jalur magang dan rekrutmen bagi lulusan SMK.",
+        content: "<p>Penandatanganan MoU dilakukan pada 2 Oktober 2025 di kantor PT Formosa Bag Indonesia. Perwakilan sekolah dan BKK hadir untuk merancang program pelatihan dan penempatan kerja bagi lulusan SMK Ma'arif NU Bobotsari. Melalui kemitraan ini, siswa akan mendapat akses magang terstruktur dan peluang rekrutmen yang sesuai kompetensi mereka.</p>",
+        ts: Date.now() - (1000*60*60*24*30)
+      },
+      { id: cryptoId(),
+        title: "Rekapitulasi Realisasi Penggunaan Dana Bosp",
+        date: "2025-07-04",
+        image: "bosp.jpeg",
+        excerpt: "Rekapitulasi Realisasi Penggunaan Dana Bosp periode tanggal : 01 Januari s.d 30Juni 2025 Tahap 1 Tahun 2025",
+        content: "<p>SMK Ma’arif NU Bobotsari telah merilis laporan Rekapitulasi Realisasi Penggunaan Dana BOS Reguler Tahap 1 Tahun 2025 untuk periode 01 Januari–30 Juni 2025. Total dana yang diterima sebesar Rp 1.483.200.000, dengan realisasi penggunaan Rp 1.325.695.505 dan saldo akhir Rp 166.520.341. Laporan disusun secara transparan dan akuntabel sesuai Juknis BOS Tahun 2025.</p>",
         ts: Date.now() - (1000*60*60*24*30)
       }
     ];
@@ -392,9 +400,10 @@
     ];
 
     const DEFAULT_STAFF = [
-      { id: cryptoId(), name: "Budi, S.Pd", role: "WKS. Bid Humas & Ketua BKK", image: "Budi.jpg", desc: "", wa: "" },
-      { id: cryptoId(), name: "Anita Mujiati, S.Pd", role: "Koord. KI, PKL & Bendahara BKK", image: "Anita.jpg", desc: "", wa: "" },
-      { id: cryptoId(), name: "Iqbal Dia Rofatul", role: "Staff Administrasi Humas & BKK", image: "Iqbal-dia.jpg", desc: "", wa: "" }
+      {id: cryptoId(), name: "Dedy Utomo, S.Pd", role: "Kepala Sekolah", image: "KS.jpg", desc: "", wa: "+6285728940098" },
+      { id: cryptoId(), name: "Budi, S.Pd", role: "WKS. Bid Humas & Ketua BKK", image: "BUdi.jpg", desc: "", wa: "+6281227466276" },
+      { id: cryptoId(), name: "Anita Mujiati, S.Pd", role: "Koord. KI, PKL & Bendahara BKK", image: "Anita.jpg", desc: "", wa: "+6285799985957" },
+      { id: cryptoId(), name: "Iqbal Dia Rofatul", role: "Staff Administrasi Humas & BKK", image: "Iqbal-dia.jpg", desc: "", wa: "+6283136252917" }
     ];
 
     /* ---------- HELPERS ---------- */
